--- a/_posts/2016-08-18-core.spec.md
+++ b/_posts/2016-08-18-core.spec.md
@@ -24,11 +24,12 @@ function, and what you expect to get back. You have to *annotate* your code as y
 write it. When you run your code, if you pass it the wrong data it will
 immediately fail.
 
-When I first tried out ML, types didn't make sense to me - I just want to write
-a function to do stuff! Especially because we don't have types, though it's even
-more important for us dynamic language users to practice Test-Driven
-Development. *First* write your test, what you expect to see, and *then* write your
-function, and then test your function. Did it do what you expected?
+When I first tried out [ML](https://en.wikipedia.org/wiki/Standard_ML), types
+didn't make sense to me - I just want to write a function to do stuff!
+Especially because we don't have types, though it's even more important for us
+dynamic language users to practice Test-Driven Development. *First* write your
+test, what you expect to see, and *then* write your function, and then test your
+function. Did it do what you expected?
 
 Tests and types serve a similar purpose. They let us go on to write other parts
 of our program without worrying that we'll break previous parts of our program.
@@ -42,29 +43,35 @@ need search.
 In the same way, dynamic and typed languages address reciprocal problems. If you
 describe your expected data too precisely, you are bogged down in endless type
 annotations (you have to write out a lot of stuff), and you cannot freely
-combine and build data. It's boring and suffocating. If you don't describe your
-data, you have no assurances of what will happen and you spend a lot of time
-addressing one bug after another, and you cannot change your program freely
-without introducing more bugs. It's tense and constricting.
+combine and build data (because they don't perfectly match). It's boring and
+suffocating. But if you don't describe your data, you have no assurances of what
+will happen when you run your code, and you spend a lot of time addressing one
+bug after another, and you cannot change your program freely without introducing
+more bugs. It's tense and constricting.
 
-It's best to view dynamic and typed languages on a continuum. What gets checked
-where? Even in a dynamic language, `(* 3 "myname")` will throw an error, and even
-in a typed language you can get away with some stuff.
+There's no need to get ideological about which sort of language is better! It's
+best to view dynamic and typed languages on a continuum. What gets checked
+where? Even in a dynamic language, `(* 3 "myname")` will throw an error, and
+even in a typed language you can get away with some stuff.
 
 ## Staying Light and Loose<a id="orgheadline2"></a>
+
+With that background in mind, we can understand some of the goals of
+Spec.  
 
 core.spec wants to avoid introducing too much restriction via the back door with
 excessive schemas for your data, while avoiding manual parsing and error
 reporting. Because property-based generative testing works better than writing
-your own tests, Spec wants to enable that. 
+your own tests, Spec also wants to enable that.
 
 Spec thus aims to be expressive, like a good dynamic language ought, while
 capturing some of the advantages of typing and avoiding its disadvantages, and
 also enable generative testing. Bold claim!
 
-clojure.spec allows you to describe the data your functions expect and return,
-and even better the *shape* of the data. The *shape* of your data tells you more, in
-many ways, than the mere static *type* of your data.
+To accomplish these goals, Spec allows you to describe the data your functions
+expect and return, and even better the *shape* of the data. Rich Hickey argues
+that the *shape* of your data tells you more, in many ways, than the mere static
+*type* of your data. Let's take a look.
 
 ## Resources and Notes <a id="orgheadline4"></a>
 
@@ -124,7 +131,7 @@ After you're done all that, as much as you would like, `s/gen` will generate
 tests for you. `s/explain` generates an error message, and formats it in a
 string with `s/explain-str` or as data with `s/explain-data`.
 
-# Flexible and Powerful<a id="orgheadline5"></a>
+## Flexible and Powerful<a id="orgheadline5"></a>
 
 I'm hoping that Spec will make typing look downright *limited* as a program
 description. Ambrose Bonnaire-Sergeant is working on generating automatic type
