Post on core.spec

--- a/_posts/2016-08-18-core.spec.md
+++ b/_posts/2016-08-18-core.spec.md
@@ -105,12 +105,12 @@ in the `::recipe` spec. That would limit you as you combine different recipe
 maps. Instead, tell Spec in the `::ingredients` map. Now you can provide specs
 for different maps, and also freely combine them.
 
-Further, your ::ingredients map spec will get checked first, before ::recipe's
-spec, and you will fail fast.
+Further, your `::ingredients` map spec will get checked first, before you have
+even written `::recipe's` spec, and you will fail fast.
 
-(Interestingly, if you want `s/cat` adds a further operation. It checks that it
+(Interestingly, if you want, `s/cat` adds a further operation. It checks that it
 gets all the data, but it returns the data slotted in with the keywords you
-specified. By using `s/conform` with `s/cat`, you've transformed your data.
+specified. By using `s/conform` with `s/cat`, you've transformed your data.)
 
 To build more sophisticated data descriptions, like "my user needs to provide
 either a phone number or an email," `s/alt` lets you pick one or the other. No
@@ -134,9 +134,9 @@ string with `s/explain-str` or as data with `s/explain-data`.
 ## Flexible and Powerful<a id="orgheadline5"></a>
 
 I'm hoping that Spec will make typing look downright *limited* as a program
-description. Ambrose Bonnaire-Sergeant is working on generating automatic type
-annotations with Typed Clojure, and I'm curious to see how Spec could take
-advantage of that project.
+description. Ambrose Bonnaire-Sergeant is working on [generating automatic
+type](https://www.youtube.com/watch?v=DRJeHthzOjk) annotations with Typed
+Clojure, and I'm curious to see how Spec could take advantage of that project.
 
 The future looks bright for an even more expressive and *safe* language that goes
 beyond the old typed-dynamic antagonisms!
