Post on core.spec

--- a/_posts/2016-08-18-core.spec.md
+++ b/_posts/2016-08-18-core.spec.md
@@ -26,13 +26,14 @@ immediately fail.
 
 When I first tried out [ML](https://en.wikipedia.org/wiki/Standard_ML), types
 didn't make sense to me - I just want to write a function to do stuff!
-Especially because we don't have types, though it's even more important for us
+Especially because we don't have types, though, it's even more important for us
 dynamic language users to practice Test-Driven Development. *First* write your
 test, what you expect to see, and *then* write your function, and then test your
 function. Did it do what you expected?
 
-Tests and types serve a similar purpose. They let us go on to write other parts
-of our program without worrying that we'll break previous parts of our program.
+Tests and types thus serve a similar purpose. They let us go on to write other
+parts of our program without worrying that we'll break previous parts of our
+program.
 
 An analogy may be in order. Search and curation are reciprocal problems. If you
 have a huge amount of information, you need to search through it and it's hard
@@ -59,8 +60,8 @@ even in a typed language you can get away with some stuff.
 With that background in mind, we can understand some of the goals of
 Spec.  
 
-core.spec wants to avoid introducing too much restriction via the back door with
-excessive schemas for your data, while avoiding manual parsing and error
+core.spec wants to avoid introducing too much type restriction (via the back door,
+with excessive schemas for your data), while avoiding manual parsing and error
 reporting. Because property-based generative testing works better than writing
 your own tests, Spec also wants to enable that.
 
