essay on changing web techs

--- a/_posts/2016-08-23-GitReset.md
+++ b/_posts/2016-08-23-GitReset.md
@@ -33,13 +33,13 @@ Frankly, `git reset` kind of gives me the willies.
 As [this great article](https://git-scm.com/blog/2011/07/11/reset.html) or this [great Stackoverflow post](http://stackoverflow.com/questions/2530060/can-you-explain-what-git-reset-does-in-plain-english) explains, \`git reset\`
 will do one of three things.
 
--   `git reset &#x2013;soft` will undo your last commit, and make your HEAD (which
+-   `git reset --soft` will undo your last commit, and make your HEAD (which
     tracks your latest commit) look like your staging area.
--   `git reset &#x2013;mixed` will do the above, and then go on to undo your latest
+-   `git reset --mixed` will do the above, and then go on to undo your latest
     additions to your staging area.
--   `git reset &#x2013;hard` will do both of the previous two steps, and then also erase
+-   `git reset --hard` will do both of the previous two steps, and then also erase
     your latest file changes and go back to the last commit.
--   `git reset &#x2013;any-flag commit-hash-here` does everything above, but you specify
+-   `git reset --any-flag commit-hash-here` does everything above, but you specify
     exactly which commit we're going back to.
 
 As you can see, `reset` is about destroying changes you don't like. But wait a
