Essay on Snowflake TOC

--- a/_drafts/2016-11-02-SnowflakeTOC.org
+++ b/_drafts/2016-11-02-SnowflakeTOC.org
@@ -19,7 +19,7 @@ nofollow: false
 ---
 #+END_HTML
 
-** 
+** Temporarily Enlightened
 Hinduism and Buddhism have this idea that a truly enlightened person can
 perceive metaphysical truths that other people cannot. Like, you reach this
 stage of clear-sightedness, and you become not just a moral saint but you also
