fix to Chaos Monkey post

--- a/_drafts/2016-11-03-EmergentHabits.org
+++ b/_drafts/2016-11-03-EmergentHabits.org
@@ -1,9 +1,10 @@
+#+BEGIN_HTML
 ---
 layout: post
 title: The Chaos Monkey and Productive Habits
 date: 2016-11-03 13:39
 # Should be longer than 20 words, so it will appear as post summary
-description: In which I raid yet <a href="https://medium.com/forte-labs/the-fall-of-neo-pavlovianism-and-rise-of-emergent-behavior-change-896261c88202#.936iuwfrp">another</a> Tiago Forte essay.
+description: In which I raid yet [another](https://medium.com/forte-labs/the-fall-of-neo-pavlovianism-and-rise-of-emergent-behavior-change-896261c88202#.936iuwfrp) Tiago Forte essay.
 # tags will also be used as html meta keywords.
 tags:
   - philosophy doggerel
@@ -16,17 +17,17 @@ published: true
 noindex: false
 nofollow: false
 ---
+#+END_HTML
 
-### Beautiful Habits<a id="orgheadline1"></a>
-
-The vast majority of productivity gurus rely on *habits*. Just form the right
+*** Beautiful Habits
+The vast majority of productivity gurus rely on /habits/. Just form the right
 habits, do the right thing enough times, and you will cross some magical
 horizon. After the 1000th repetition or the 30th day, you will cross into a
 hallowed land, the Land that Time Forgets, and you won't have to work at it
 anymore. 
 
 No, no work for you, you will do the right things automatically. You'll topple
-over the walls of your cubicle like in *Office Space*, damn it feels good to be a
+over the walls of your cubicle like in /Office Space/, damn it feels good to be a
 gangsta, kick your heels up on your desk, peer over your shades with a hint of a
 smile, and coast on your innate brilliance effortlessly manifesting through your
 hard-won habits.
@@ -37,10 +38,9 @@ Set aside the same time every day. Habits depend on stimulus and response. You
 need to train your brain to respond to a new pleasurable reward. If you can
 build on top of an already-existing habit, even better.
 
-### Cold Reality<a id="orgheadline2"></a>
-
+*** Cold Reality
 Sadly, the research doesn't back this story up. Do the same thing at the same
-time every day? Dude, if I could do that, I wouldn't *need* habits. That would be
+time every day? Dude, if I could do that, I wouldn't /need/ habits. That would be
 a habit far more powerful than any other habit.
 
 When I try to make my schedule the same every day, I just die of boredom. It's
@@ -54,10 +54,9 @@ yielding to this temptation - how luxurious!
 
 Yes, Big Mac as Christian Grey. You're welcome for that image.
 
-As often as not, we're actually rewarded by the *anticipation*. It's the getting, not the having. 
+As often as not, we're actually rewarded by the /anticipation/. It's the getting, not the having. 
 
-### Gardening Emergent Systems<a id="orgheadline3"></a>
-
+*** Gardening Emergent Systems
 The difficulty of setting a strict schedule and the trickiness of designing good
 rewards hint at why these seemingly-simple shortcuts don't work: we humans are
 not nearly simple enough. You'd have to be far more simple to just plug in a
@@ -82,18 +81,19 @@ opportunity for new patterns to emerge.
 
 You can't build a habit, but you might be able to grow it.
 
-> We can rest assured that there will be no shortage of “disturbances” to
-> propagate. They can come from the outside (life events), from inside (mid-life
-> crises), and can possibly even be created on purpose, like Josh Waitzkin’s
-> “self-created earthquakes” that high performers call upon for creative
-> [inspiration](https://medium.com/forte-labs/the-fall-of-neo-pavlovianism-and-rise-of-emergent-behavior-change-896261c88202#.936iuwfrp).
+#+BEGIN_QUOTE
+We can rest assured that there will be no shortage of “disturbances” to
+propagate. They can come from the outside (life events), from inside (mid-life
+crises), and can possibly even be created on purpose, like Josh Waitzkin’s
+“self-created earthquakes” that high performers call upon for creative
+[[https://medium.com/forte-labs/the-fall-of-neo-pavlovianism-and-rise-of-emergent-behavior-change-896261c88202#.936iuwfrp][inspiration]].
+#+END_QUOTE
 
 If you really want to change things, seek instability, not stability, in your
 life. With time, you'll be so precise and skilled at exploiting or even creating
 mini-pockets of chaos and change, you won't require a cross-country move.
 
-### Scott Pilgrim vs. The World<a id="orgheadline4"></a>
-
+*** Scott Pilgrim vs. The World
 People have always been interested in forming better habits, becoming better
 people, becoming more powerful people more able to achieve their goals.
 
