Saving old changes

--- a/_drafts/.#2016-04-11-LifeandComputerSciences.org
+++ b/_drafts/.#2016-04-11-LifeandComputerSciences.org
@@ -1,1 +1,5 @@
+XSym
+0032
+263eb32cac822838295f27d6ab1cce58
 timothyroy@Macintosh.local.11965
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
