--- a/_drafts/.#2016-06-27-WannabeEU.org
+++ b/_drafts/.#2016-06-27-WannabeEU.org
@@ -1,1 +1,5 @@
+XSym
+0032
+351af7f0b801704fd31d98e0a2c02e49
 timothyroy@Macintosh.local.25513
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
