--- a/_drafts/.#2016-09-19-NewandTrue.org
+++ b/_drafts/.#2016-09-19-NewandTrue.org
@@ -1,1 +1,5 @@
+XSym
+0032
+abbad0912cf048d317de8af271147943
 timothyroy@Macintosh.local.32687
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
