--- a/_drafts/2016-08-16-ProgressiveLevels.org
+++ b/_drafts/2016-08-16-ProgressiveLevels.org
@@ -104,10 +104,10 @@ precise, you have to be patient. Pretending to higher levels of the pyramid than
 you have got will only make you sound annoyingly pretentious, to yourself and to
 others.
 
-*** Egan's Five Stages
+*** Kegan's Five Stages
 The physical and the existential lead us to the emotional.
 
-David Chapman explains, with some additions of his own, Egan's stages of
+David Chapman explains, with some additions of his own, Kegan's stages of
 development.
 
 We all remember the hilarious, ridiculous drama of middle school. Who would
