--- a/_drafts/.#2016-08-07-VotingOurEgos.org
+++ b/_drafts/.#2016-08-07-VotingOurEgos.org
@@ -1,1 +1,5 @@
+XSym
+0032
+489e4092ff23badd4acbad040cbc6377
 timothyroy@Macintosh.local.15056
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
