--- a/_drafts/.#2016-10-27-ChairlessOffice.org
+++ b/_drafts/.#2016-10-27-ChairlessOffice.org
@@ -1,1 +1,5 @@
+XSym
+0031
+cf18f718f9e22f3e9c9977fd6c3492df
 timothyroy@Macintosh.local.1307
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
