Testing out post description, and adds many categories

--- a/_posts/2016-08-13-ANewVC.md
+++ b/_posts/2016-08-13-ANewVC.md
@@ -5,8 +5,7 @@ date: 2016-08-13 15:25
 # Should be longer than 20 words, so it will appear as post summary
 description: Vinay Gupta has a lot of ideas, including a couple about how to do venture capital right
 # tags will also be used as html meta keywords.
-tags:
-  - startups
+categories: ["strategy", "blockchain"]
 
 show_meta: true
 comments: true
