--- a/_posts/2016-08-18-core.spec.md
+++ b/_posts/2016-08-18-core.spec.md
@@ -5,8 +5,7 @@ date: 2016-08-18 11:49
 # Should be longer than 20 words, so it will appear as post summary
 description: Why the new Spec library can make us (me) better programmers
 # tags will also be used as html meta keywords.
-tags:
-  - programming
+categories: ["software", "programming"]
 
 show_meta: true
 comments: true
