Adds categories, some slight edits

--- a/_posts/2016-05-06-IronLaw.md
+++ b/_posts/2016-05-06-IronLaw.md
@@ -5,8 +5,7 @@ date: 2016-05-06 14:20
 # Should be longer than 20 words, so it will appear as post summary
 description: "In which I take the bold and risky step of proposing a non-partisan law about humans"
 # tags will also be used as html meta keywords.
-tags:
-  - random thoughts
+categories: ["philosophy", "politics"]
 
 show_meta: true
 comments: true
