--- a/_posts/2016-08-23-GitReset.md
+++ b/_posts/2016-08-23-GitReset.md
@@ -2,10 +2,8 @@
 layout: post
 title: "Git Reset: Use With Caution"
 date: 2016-08-23 18:43
-# Should be longer than 20 words, so it will appear as post summary
 description: "A brief explainer on `git reset` - and why it probably shouldn't be your go-to tool."
-# tags will also be used as html meta keywords.
-categories: ["software", "programming""]
+categories: ["software", "programming"]
 
 show_meta: true
 comments: true
