--- a/_posts/2022-03-09-Ukraine.md
+++ b/_posts/2022-03-09-Ukraine.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:On the Ukrainian International Legion
+title: On the Ukrainian International Legion
 permalink: /ukrainian-international-legion
-date: 2021-11-01
+date: 2022-03-09
 # Should be longer than 20 words, so it will appear as post summary
-description: Putin's war of choice
+description: Helping Europe in Putin's war of choice
 # tags will also be used as html meta keywords. Only use one, as it goes in the URL
 categories: ["military", "philosophy"]
 
