Add thanks and poem

--- a/_posts/2022-03-09-Ukraine.md
+++ b/_posts/2022-03-09-Ukraine.md
@@ -16,6 +16,7 @@ published: true
 noindex: false
 nofollow: false
 ---
+
 I had planned to spend a quarter of this year meditating in either Burma or Japan. Instead history, repeating the twentieth century in just two years, has followed a global pandemic with war in Europe. Ukraine has called her citizens home from around the world to her defense, and has asked friends to join as well.
 
 About 20,000 volunteers have already arrived there, and I leave tomorrow to join them. I find that other volunteers, including those staying stateside to funnel others, immediately understand why. My friends, who know me as a deeply unintimidating person, don't. In this my own history repeats itself. I had similar reactions a decade ago and more, when I joined the US Army and deployed to Afghanistan, but I am if anything less able to explain the decision this time around.
@@ -44,4 +45,17 @@ When I was younger I worried terribly about wasting time, and whether I would ar
 
 It's unwise to pin hopes on events over which one has no control (which in the final analysis includes even the movements of the mind). I hope to bear witness to each moment, and to take effective action against the enemy. Helping the Ukrainians is a good thing to do in the world, and a thing I can do, and doing hard things for someone else is good for the soul.
 
-Even if the Ukrainians fight a very long war, I think we ought to continue to send more aid and to press sanctions on Russia, while avoiding WWIII until Putin actually launches nukes. It is madness to punish individual Russians who are often also victims of the regime, and to throw away the many cultural gifts of the great Russian people. Slava Ukraini.
+I am deeply grateful to my family, particularly my brothers who have helped me prepare, and to my friends around the world for their expressions of support. Even if the Ukrainians fight a very long war, I think we ought to continue to send more aid and to press sanctions on Russia, while avoiding WWIII until Putin actually launches nukes. It is madness to punish individual Russians who are often also victims of the regime, and to throw away the many cultural gifts of the great Russian people. Slava Ukraini.
+
+```
+For some journeys, you prepare like this:
+Make sure the stove is off.
+Fold your clothes for ready use.
+Throw out the old tomatoes, leave the slightly-hard cheese.
+
+For one journey, you prepare like this:
+Turn off all the bills.
+Get rid of what you can, leave instructions for the rest.
+Your unfinished novel wasn't so great. The love letter is.
+
+```
