--- a/_posts/2022-03-09-Ukraine.md
+++ b/_posts/2022-03-09-Ukraine.md
@@ -45,9 +45,11 @@ When I was younger I worried terribly about wasting time, and whether I would ar
 
 It's unwise to pin hopes on events over which one has no control (which in the final analysis includes even the movements of the mind). I hope to bear witness to each moment, and to take effective action against the enemy. Helping the Ukrainians is a good thing to do in the world, and a thing I can do, and doing hard things for someone else is good for the soul.
 
-I am deeply grateful to my family, particularly my brothers who have helped me prepare, and to my friends around the world for their expressions of support. Even if the Ukrainians fight a very long war, I think we ought to continue to send more aid and to press sanctions on Russia, while avoiding WWIII until Putin actually launches nukes. It is madness to punish individual Russians who are often also victims of the regime, and to throw away the many cultural gifts of the great Russian people. Slava Ukraini.
+I am deeply grateful to my family, particularly my brothers who have helped me prepare, and to my friends around the world for their expressions of support. Even if the Ukrainians fight a very long war, I think we ought to continue to send more aid and to press sanctions on Russia, while avoiding WWIII until Putin actually launches nukes. It is madness to punish individual Russians who are often also victims of the regime, and to throw away the many cultural gifts of the great Russian people.
 
-```
+Слава Україні!
+
+---------------------------------------------------------
 For some journeys, you prepare like this:
 Make sure the stove is off.
 Fold your clothes for ready use.
@@ -57,5 +59,3 @@ For one journey, you prepare like this:
 Turn off all the bills.
 Get rid of what you can, leave instructions for the rest.
 Your unfinished novel wasn't so great. The love letter is.
-
-```
