Try line breaks

--- a/_posts/2022-03-09-Ukraine.md
+++ b/_posts/2022-03-09-Ukraine.md
@@ -50,12 +50,12 @@ I am deeply grateful to my family, particularly my brothers who have helped me p
 Слава Україні!
 
 ---------------------------------------------------------
-For some journeys, you prepare like this:
+> For some journeys, you prepare like this: 
 Make sure the stove is off.
 Fold your clothes for ready use.
 Throw out the old tomatoes, leave the slightly-hard cheese.
 
-For one journey, you prepare like this:
+> For at least one journey, you prepare like this:
 Turn off all the bills.
 Get rid of what you can, leave instructions for the rest.
 Your unfinished novel wasn't so great. The love letter is.
